--- a/homepage/public/index.html
+++ b/homepage/public/index.html
@@ -11,6 +11,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@30,400,0,200" />
+
+
     <title>Virtual Experiments</title>
   </head>
   <body>
